--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ readme = "README.md"
 packages = [{include = "main"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-django-restframework = "^0.0.1"
+python = "^3.9"
+djangorestframework = "^3.15.1"
+gunicorn = "^21.2.0"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
