--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - .env
     environment:
       - MODE=server
-      - SQL_HOST=localhost
+      - SQL_HOST=host.docker.internal
       - PORT=8000
       - BASE_URL=http://localhost:8000
     restart: unless-stopped
